--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "cacaoftapp-eshop",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Cacaoftlogo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/cft.jpeg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.yonaikerexpo.cacaoftappeshop"
     },
     "web": {
       "favicon": "./assets/favicon.png"
