--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "5.12.8",
     "axios": "0.21.0",
     "expo": "~43.0.2",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "jwt-decode": "3.1.2",
     "mime": "2.4.7",
@@ -32,13 +33,15 @@
     "react-native-swiper": "1.6.0",
     "react-native-tab-view": "2.15.2",
     "react-native-toast-message": "1.4.1",
+    "react-native-unimodules": "^0.14.10",
     "react-native-vector-icons": "7.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
